--- a/make_conv.ipynb
+++ b/make_conv.ipynb
@@ -952,7 +952,7 @@
     "## Edge detection on every gradient\n",
     "---\n",
     "단순 thresholding을 실시하면 제대로 edge detection이 진행되지 않은 것처럼 보이는데 이는 방법에 따라 모든 edge가 아니라 한방향의 기울기(음->양, 양->음)만 처리하기 때문이다.<br/>\n",
-    "실제 edge는 둘 모두 포함되기 때문에 둘 모두 처리해주는 방식"
+    "실제 edge는 둘 모두 포함되기 때문에 둘 모두 처리해주는 방식으로 thresholding하면 자세히 확인할 수 있다."
    ]
   },
   {
